--- a/package.json
+++ b/package.json
@@ -1,19 +1,27 @@
 {
-  "name": "llm-proxy",
-  "version": "0.0.0",
+  "name": "llm-proxy-on-cloudflare-workers",
+  "author": "blue.pen5805",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "deploy": "wrangler deploy",
     "dev": "wrangler dev",
     "start": "wrangler dev",
     "test": "vitest",
-    "cf-typegen": "wrangler types"
+    "test-ci": "vitest run",
+    "cf-typegen": "wrangler types",
+    "prettier": "prettier --write .",
+    "prettier-ci": "prettier --check ."
   },
   "devDependencies": {
-    "@cloudflare/vitest-pool-workers": "^0.5.2",
-    "@cloudflare/workers-types": "^4.20241202.0",
-    "typescript": "^5.5.2",
-    "vitest": "2.0.5",
-    "wrangler": "^3.60.3"
+    "@cloudflare/vitest-pool-workers": "^0.5.40",
+    "@cloudflare/workers-types": "^4.20241224.0",
+    "prettier": "^3.4.2",
+    "typescript": "^5.7.2",
+    "vitest": "2.1.8",
+    "wrangler": "^3.99.0"
+  },
+  "dependencies": {
+    "eventsource-parser": "^3.0.0"
   }
 }
