--- a/.dev.vars.example
+++ b/.dev.vars.example
@@ -12,6 +12,7 @@ OPENAI_API_KEY=
 GEMINI_API_KEY=
 ANTHROPIC_API_KEY=
 COHERE_API_KEY=
+DEEPSEEK_API_KEY=
 GROK_API_KEY=
 GROQ_API_KEY=
 MISTRAL_API_KEY=
