Add Cerebras provider implementation and configuration

--- a/.dev.vars.example
+++ b/.dev.vars.example
@@ -11,6 +11,7 @@ CF_AIG_TOKEN=
 OPENAI_API_KEY=
 GEMINI_API_KEY=
 ANTHROPIC_API_KEY=
+CEREBRAS_API_KEY=
 COHERE_API_KEY=
 DEEPSEEK_API_KEY=
 GROK_API_KEY=
