--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@cloudflare/vitest-pool-workers": "^0.7.8",
     "@cloudflare/workers-types": "^4.20250311.0",
+    "@types/node": "^22.13.10",
     "prettier": "^3.5.3",
     "typescript": "^5.8.2",
     "vitest": "^3.0.8",
