--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,7 +2,7 @@
 name = "llm-proxy"
 main = "src/index.ts"
 compatibility_date = "2024-11-06"
-compatibility_flags = ["nodejs_compat"]
+compatibility_flags = ["nodejs_compat_v2", "nodejs_compat_populate_process_env"]
 
 # Workers Logs
 # Docs: https://developers.cloudflare.com/workers/observability/logs/workers-logs/
