feat: add Perplexity AI provider and endpoint implementation

--- a/.dev.vars.example
+++ b/.dev.vars.example
@@ -20,5 +20,6 @@ GROQ_API_KEY=
 MISTRAL_API_KEY=
 OPENROUTER_API_KEY=
 HUGGINGFACE_API_KEY=
+PERPLEXITYAI_API_KEY=
 REPLICATE_API_KEY=
 CLOUDFLARE_API_KEY=
