--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "prettier-ci": "prettier --check ."
   },
   "devDependencies": {
-    "@cloudflare/vitest-pool-workers": "^0.8.22",
-    "@types/node": "^22.15.2",
+    "@cloudflare/vitest-pool-workers": "^0.8.24",
+    "@types/node": "^22.15.3",
     "prettier": "^3.5.3",
     "typescript": "^5.8.3",
+    "vite": "^6.3.4",
     "vitest": "^3.1.2",
-    "wrangler": "^4.13.2"
+    "wrangler": "^4.14.1"
   }
 }
