--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "deploy": "wrangler deploy",
     "dev": "wrangler dev",
     "start": "wrangler dev",
-    "test": "vitest",
-    "test-ci": "vitest run",
+    "test": "vitest run",
+    "test-watch": "vitest watch",
     "cf-typegen": "wrangler types",
     "prettier": "prettier --write .",
     "prettier-ci": "prettier --check ."
