--- a/.gitignore
+++ b/.gitignore
@@ -170,3 +170,9 @@ dist
 
 .dev.vars
 .wrangler/
+
+# LLM resources
+# Ignore all files in .llm_resources except scripts and config files
+.llm_resources/*
+!.llm_resources/download.sh
+!.llm_resources/urls.yaml
