--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,4 +23,5 @@ jobs:
           cache: "npm"
       - run: npm ci
       - run: npm run test
+      - run: npm run lint
       - run: npm run prettier-ci
