refactor: update cf-typegen script to include environment parameter in package.json and adjust generated comment in worker-configuration.d.ts

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "wrangler dev",
     "test": "vitest run",
     "test-watch": "vitest watch",
-    "cf-typegen": "wrangler types",
+    "cf-typegen": "wrangler types --env example",
     "prettier": "prettier --write .",
     "prettier-ci": "prettier --check .",
     "lint": "eslint 'src/**/*.ts'",
