--- a/.gitignore
+++ b/.gitignore
@@ -169,7 +169,11 @@ dist
 # wrangler project
 
 .dev.vars
+.dev.vars.*
 .wrangler/
+
+# Configuration files
+config.jsonc
 
 # LLM resources
 # Ignore all files in .llm_resources except scripts and config files
