--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
   "type": "module",
   "scripts": {
     "deploy": "wrangler deploy",
-    "dev": "wrangler dev",
-    "start": "wrangler dev",
+    "dev": "npm run generate-dev-vars && wrangler dev",
+    "cf-typegen": "npm run generate-dev-vars -- --env example && wrangler types --env example",
     "test": "vitest run",
     "test-watch": "vitest watch",
-    "cf-typegen": "wrangler types --env example",
     "prettier": "prettier --write .",
     "prettier-ci": "prettier --check .",
     "lint": "eslint 'src/**/*.ts'",
     "lint:fix": "eslint --fix 'src/**/*.ts'",
+    "generate-dev-vars": "ts-node scripts/generate-dev-vars.ts",
     "download-llm-resources": "./.llm_resources/download.sh"
   },
   "devDependencies": {
@@ -27,6 +27,7 @@
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.5.1",
     "prettier": "^3.6.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.35.0",
     "vite": "^7.0.0",
