--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lint": "eslint 'src/**/*.ts'",
     "lint:fix": "eslint --fix 'src/**/*.ts'",
     "generate-dev-vars": "ts-node scripts/generate-dev-vars.ts",
+    "deploy-secrets": "ts-node scripts/deploy-secrets.ts",
     "download-llm-resources": "./.llm_resources/download.sh"
   },
   "devDependencies": {
