--- a/.gitignore
+++ b/.gitignore
@@ -174,6 +174,8 @@ dist
 
 # Configuration files
 config.jsonc
+config.*.jsonc
+!config.example.jsonc
 
 # LLM resources
 # Ignore all files in .llm_resources except scripts and config files
