--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "secrets:deploy": "ts-node scripts/deploy-secrets.ts",
     "secrets:dev-vars": "ts-node scripts/generate-dev-vars.ts",
     "secrets:create": "ts-node scripts/create-config.ts",
-    "download-llm-resources": "./.llm_resources/download.sh"
+    "download-llm-resources": "ts-node scripts/download-llm-resources.ts"
   },
   "devDependencies": {
     "@cloudflare/vitest-pool-workers": "^0.8.47",
