feat: update LLM resources structure and documentation, add new project info and workflow guidelines

--- a/.gitignore
+++ b/.gitignore
@@ -180,4 +180,6 @@ config.*.jsonc
 # LLM resources
 # Ignore all files in .llm_resources except config files
 .llm_resources/*
-!.llm_resources/urls.jsonc
+!.llm_resources/.urls.jsonc
+!.llm_resources/PROJECT_INFO.md
+!.llm_resources/WORKFLOW.md
