fix: disable smart placement mode in wrangler configuration

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -23,6 +23,6 @@
   // Smart Placement
   // Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/
   "placement": {
-    "mode": "smart"
+    "mode": "off"
   }
 }
