feat: Replace `REGION_ANCHOR_URL` configuration with `ENABLE_GLOBAL_ROUND_ROBIN` and update its type to boolean.

--- a/config.example.jsonc
+++ b/config.example.jsonc
@@ -43,5 +43,5 @@
   // --- Configurations ---
   "DEV": false,
   "DEFAULT_MODEL": null,
-  "REGION_ANCHOR_URL": null
+  "ENABLE_GLOBAL_ROUND_ROBIN": false
 }
