build: Introduce TypeScript type checking to the project workflow and remove an unused import.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cf:logout": "wrangler logout",
     "test": "vitest run",
     "test-watch": "vitest watch",
+    "tsc": "tsc --noEmit",
     "prettier": "prettier --write .",
     "prettier-ci": "prettier --check .",
     "lint": "eslint 'src/**/*.ts'",
