feat: add Ollama LLM provider, including configuration, implementation, and tests.

--- a/config.example.jsonc
+++ b/config.example.jsonc
@@ -39,6 +39,8 @@
   "REPLICATE_API_KEY": null,
   // Cloudflare Workers AI: https://dash.cloudflare.com/
   "CLOUDFLARE_API_KEY": null,
+  // Ollama Cloud: https://ollama.com/
+  "OLLAMA_API_KEY": null,
 
   // --- Configurations ---
   "DEV": false,
