feat: Allow custom OpenAI providers to define static models in their configuration.

--- a/config.example.jsonc
+++ b/config.example.jsonc
@@ -47,7 +47,8 @@
     // {
     //   "name": "my-custom-llm",
     //   "baseUrl": "https://llm.example.com/v1",
-    //   "apiKeys": []
+    //   "apiKeys": [],
+    //   "models": ["model-1", "model-2"] // Optional
     // }
   ],
 
