config: Update VS Code Copilot Chat terminal auto-approve settings.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-  "github.copilot.chat.agent.terminal.allowList": ["npm", "node", "date"]
+  "chat.tools.terminal.autoApprove": {
+    "npm": true,
+    "node": true,
+    "date": true
+  }
 }
