feat: Enable custom chat completion and models paths for CustomOpenAI providers, and refactor provider path properties to getters.

--- a/config.example.jsonc
+++ b/config.example.jsonc
@@ -49,6 +49,8 @@
     //   "baseUrl": "https://llm.example.com/v1",
     //   "apiKeys": [],
     //   "models": ["model-1", "model-2"] // Optional
+    //   "chatCompletionPath": "/v1/chat/completions", // Optional
+    //   "modelsPath": "/v1/models" // Optional
     // }
   ],
 
